tested the buffer example

--- a/1Wires/Vivado_RTL/buffers.runs/impl_1/usage_statistics_webtalk.html
+++ b/1Wires/Vivado_RTL/buffers.runs/impl_1/usage_statistics_webtalk.html
@@ -4,12 +4,12 @@
   <TR ALIGN='CENTER' BGCOLOR='#A7BFDE'><TD COLSPAN='4'><B>software_version_and_target_device</B></TD></TR>
 <TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>beta</B></TD><TD>FALSE</TD>
   <TD BGCOLOR='#DBE5F1'><B>build_version</B></TD><TD>2288692</TD>
-</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>date_generated</B></TD><TD>Wed Nov 14 15:40:00 2018</TD>
+</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>date_generated</B></TD><TD>Wed Dec  5 13:59:28 2018</TD>
   <TD BGCOLOR='#DBE5F1'><B>os_platform</B></TD><TD>WIN64</TD>
 </TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>product_version</B></TD><TD>Vivado v2018.2.1 (64-bit)</TD>
   <TD BGCOLOR='#DBE5F1'><B>project_id</B></TD><TD>b5b2469ccf534f599610d9ad95d68b36</TD>
-</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>project_iteration</B></TD><TD>1</TD>
-  <TD BGCOLOR='#DBE5F1'><B>random_id</B></TD><TD>b65b04f6aabd518db342dc6b56e652b0</TD>
+</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>project_iteration</B></TD><TD>2</TD>
+  <TD BGCOLOR='#DBE5F1'><B>random_id</B></TD><TD>8947fe997b5952a08d3ffb7ee7fe6389</TD>
 </TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>registration_id</B></TD><TD>211368238_0_0_330</TD>
   <TD BGCOLOR='#DBE5F1'><B>route_design</B></TD><TD>TRUE</TD>
 </TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>target_device</B></TD><TD>xc7a100t</TD>
@@ -32,36 +32,87 @@
 <TR ALIGN='LEFT'>  <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
    <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>gui_handlers</B></TD></TR>
 <TR ALIGN='LEFT'>   <TD>addsrcwizard_specify_hdl_netlist_block_design=1</TD>
-   <TD>addsrcwizard_specify_or_create_constraint_files=1</TD>
-   <TD>basedialog_ok=6</TD>
-   <TD>boardchooser_board_table=1</TD>
-</TR><TR ALIGN='LEFT'>   <TD>constraintschooserpanel_add_files=1</TD>
-   <TD>filesetpanel_file_set_panel_tree=6</TD>
-   <TD>flownavigatortreepanel_flow_navigator_tree=6</TD>
+   <TD>addsrcwizard_specify_or_create_constraint_files=2</TD>
+   <TD>basedialog_cancel=1</TD>
+   <TD>basedialog_ok=24</TD>
+</TR><TR ALIGN='LEFT'>   <TD>boardchooser_board_table=1</TD>
+   <TD>closeplanner_yes=1</TD>
+   <TD>cmdmsgdialog_ok=3</TD>
+   <TD>constraintschooserpanel_add_existing_or_create_new_constraints=1</TD>
+</TR><TR ALIGN='LEFT'>   <TD>constraintschooserpanel_add_files=2</TD>
+   <TD>filesetpanel_file_set_panel_tree=19</TD>
+   <TD>flownavigatortreepanel_flow_navigator_tree=28</TD>
    <TD>gettingstartedview_create_new_project=1</TD>
-</TR><TR ALIGN='LEFT'>   <TD>mainmenumgr_file=2</TD>
-   <TD>mainmenumgr_project=1</TD>
+</TR><TR ALIGN='LEFT'>   <TD>graphicalview_previous=1</TD>
+   <TD>htree_collapse_all=1</TD>
+   <TD>mainmenumgr_checkpoint=2</TD>
+   <TD>mainmenumgr_file=6</TD>
+</TR><TR ALIGN='LEFT'>   <TD>mainmenumgr_import=1</TD>
+   <TD>mainmenumgr_ip=2</TD>
+   <TD>mainmenumgr_project=3</TD>
+   <TD>mainmenumgr_text_editor=2</TD>
+</TR><TR ALIGN='LEFT'>   <TD>messagewithoptiondialog_dont_show_this_dialog_again=1</TD>
+   <TD>netlistschematicview_show_cells_in_this_schematic=1</TD>
+   <TD>netlistschematicview_show_io_ports_in_this_schematic=1</TD>
+   <TD>netlistschematicview_show_nets_in_this_schematic=1</TD>
+</TR><TR ALIGN='LEFT'>   <TD>netlisttreeview_netlist_tree=3</TD>
+   <TD>pacommandnames_auto_connect_target=1</TD>
+   <TD>pacommandnames_close_project=2</TD>
+   <TD>pacommandnames_fed_toggle_routing_resources=3</TD>
+</TR><TR ALIGN='LEFT'>   <TD>pacommandnames_import_all_srcs=1</TD>
    <TD>pacommandnames_new_project=1</TD>
-   <TD>pacommandnames_run_bitgen=1</TD>
-</TR><TR ALIGN='LEFT'>   <TD>projectnamechooser_choose_project_location=2</TD>
+   <TD>pacommandnames_open_hardware_manager=1</TD>
+   <TD>pacommandnames_run_bitgen=3</TD>
+</TR><TR ALIGN='LEFT'>   <TD>pacommandnames_schematic=2</TD>
+   <TD>pacommandnames_select_area=2</TD>
+   <TD>pacommandnames_zoom_fit=1</TD>
+   <TD>pacommandnames_zoom_out=5</TD>
+</TR><TR ALIGN='LEFT'>   <TD>paviews_device=4</TD>
+   <TD>paviews_schematic=3</TD>
+   <TD>programdebugtab_open_target=2</TD>
+   <TD>programdebugtab_program_device=1</TD>
+</TR><TR ALIGN='LEFT'>   <TD>programfpgadialog_program=1</TD>
+   <TD>projectnamechooser_choose_project_location=2</TD>
    <TD>projectnamechooser_create_project_subdirectory=1</TD>
    <TD>projectnamechooser_project_name=1</TD>
-   <TD>srcchooserpanel_add_hdl_and_netlist_files_to_your_project=1</TD>
-</TR><TR ALIGN='LEFT'>   <TD>srcchooserpanel_add_or_create_source_file=1</TD>
+</TR><TR ALIGN='LEFT'>   <TD>projecttab_reload=1</TD>
+   <TD>rdicommands_delete=1</TD>
+   <TD>rdicommands_save_file=1</TD>
+   <TD>saveprojectutils_save=1</TD>
+</TR><TR ALIGN='LEFT'>   <TD>srcchooserpanel_add_hdl_and_netlist_files_to_your_project=1</TD>
+   <TD>srcchooserpanel_add_or_create_source_file=1</TD>
    <TD>srcchooserpanel_make_local_copy_of_these_files_into=1</TD>
+   <TD>stalerundialog_yes=1</TD>
 </TR>  </TABLE>
   <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
    <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>java_command_handlers</B></TD></TR>
-<TR ALIGN='LEFT'>   <TD>addsources=2</TD>
+<TR ALIGN='LEFT'>   <TD>addsources=3</TD>
+   <TD>autoconnecttarget=1</TD>
+   <TD>closeproject=2</TD>
+   <TD>editdelete=1</TD>
+</TR><TR ALIGN='LEFT'>   <TD>fedtoggleroutingresourcescmdhandler=3</TD>
+   <TD>launchprogramfpga=1</TD>
    <TD>newproject=2</TD>
-   <TD>runbitgen=1</TD>
-   <TD>runimplementation=1</TD>
-</TR><TR ALIGN='LEFT'>   <TD>runsynthesis=1</TD>
-   <TD>viewtaskrtlanalysis=1</TD>
+   <TD>openhardwaremanager=1</TD>
+</TR><TR ALIGN='LEFT'>   <TD>reportutilization=1</TD>
+   <TD>runbitgen=3</TD>
+   <TD>runimplementation=3</TD>
+   <TD>runschematic=6</TD>
+</TR><TR ALIGN='LEFT'>   <TD>runsynthesis=3</TD>
+   <TD>showsource=1</TD>
+   <TD>showview=2</TD>
+   <TD>timingconstraintswizard=1</TD>
+</TR><TR ALIGN='LEFT'>   <TD>toggleselectareamode=2</TD>
+   <TD>ui.views.c.ap=1</TD>
+   <TD>viewtaskimplementation=1</TD>
+   <TD>viewtaskrtlanalysis=4</TD>
+</TR><TR ALIGN='LEFT'>   <TD>viewtasksynthesis=2</TD>
+   <TD>zoomfit=1</TD>
+   <TD>zoomout=5</TD>
 </TR>  </TABLE>
 </TR><TR ALIGN='LEFT'>  <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
    <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>other_data</B></TD></TR>
-<TR ALIGN='LEFT'>   <TD>guimode=1</TD>
+<TR ALIGN='LEFT'>   <TD>guimode=3</TD>
 </TR>  </TABLE>
   <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
    <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>project_data</B></TD></TR>
@@ -431,10 +482,10 @@
    <TR><TD>
    <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
     <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>usage</B></TD></TR>
-<TR ALIGN='LEFT'>    <TD>elapsed=00:00:28s</TD>
+<TR ALIGN='LEFT'>    <TD>elapsed=00:00:25s</TD>
     <TD>hls_ip=0</TD>
-    <TD>memory_gain=485.059MB</TD>
-    <TD>memory_peak=743.535MB</TD>
+    <TD>memory_gain=483.211MB</TD>
+    <TD>memory_peak=741.785MB</TD>
 </TR>   </TABLE>
    </TD></TR>
   </TABLE><BR>
