--- a/-5MuxOfMux/m2x1Mux/m2x1Mux.runs/impl_1/usage_statistics_webtalk.html
+++ b/-5MuxOfMux/m2x1Mux/m2x1Mux.runs/impl_1/usage_statistics_webtalk.html
@@ -3,14 +3,14 @@
  <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
   <TR ALIGN='CENTER' BGCOLOR='#A7BFDE'><TD COLSPAN='4'><B>software_version_and_target_device</B></TD></TR>
 <TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>beta</B></TD><TD>FALSE</TD>
-  <TD BGCOLOR='#DBE5F1'><B>build_version</B></TD><TD>2288692</TD>
-</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>date_generated</B></TD><TD>Wed Oct  3 14:06:52 2018</TD>
+  <TD BGCOLOR='#DBE5F1'><B>build_version</B></TD><TD>2405991</TD>
+</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>date_generated</B></TD><TD>Wed Jan 23 11:20:18 2019</TD>
   <TD BGCOLOR='#DBE5F1'><B>os_platform</B></TD><TD>WIN64</TD>
-</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>product_version</B></TD><TD>Vivado v2018.2.1 (64-bit)</TD>
+</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>product_version</B></TD><TD>Vivado v2018.3 (64-bit)</TD>
   <TD BGCOLOR='#DBE5F1'><B>project_id</B></TD><TD>7a17beeac32d4a139770f1e541a7c4db</TD>
-</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>project_iteration</B></TD><TD>2</TD>
-  <TD BGCOLOR='#DBE5F1'><B>random_id</B></TD><TD>e92750d5bcfd55c8828ae919091c2255</TD>
-</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>registration_id</B></TD><TD>211368238_0_0_330</TD>
+</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>project_iteration</B></TD><TD>4</TD>
+  <TD BGCOLOR='#DBE5F1'><B>random_id</B></TD><TD>edd6000869535b439e905937edf58b9e</TD>
+</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>registration_id</B></TD><TD>edd6000869535b439e905937edf58b9e</TD>
   <TD BGCOLOR='#DBE5F1'><B>route_design</B></TD><TD>TRUE</TD>
 </TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>target_device</B></TD><TD>xc7a100t</TD>
   <TD BGCOLOR='#DBE5F1'><B>target_family</B></TD><TD>artix7</TD>
@@ -20,8 +20,8 @@
 </TR> </TABLE><BR>
  <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
   <TR ALIGN='CENTER' BGCOLOR='#A7BFDE'><TD COLSPAN='4'><B>user_environment</B></TD></TR>
-<TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>cpu_name</B></TD><TD>Intel(R) Core(TM) i5-6500 CPU @ 3.20GHz</TD>
-  <TD BGCOLOR='#DBE5F1'><B>cpu_speed</B></TD><TD>3192 MHz</TD>
+<TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>cpu_name</B></TD><TD>Intel(R) Core(TM) i5-8400 CPU @ 2.80GHz</TD>
+  <TD BGCOLOR='#DBE5F1'><B>cpu_speed</B></TD><TD>2808 MHz</TD>
 </TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>os_name</B></TD><TD>Microsoft Windows 8 or later , 64-bit</TD>
   <TD BGCOLOR='#DBE5F1'><B>os_release</B></TD><TD>major release  (build 9200)</TD>
 </TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>system_ram</B></TD><TD>8.000 GB</TD>
@@ -31,41 +31,67 @@
   <TR ALIGN='CENTER' BGCOLOR='#A7BFDE'><TD COLSPAN='4'><B>vivado_usage</B></TD></TR>
 <TR ALIGN='LEFT'>  <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
    <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>gui_handlers</B></TD></TR>
-<TR ALIGN='LEFT'>   <TD>basedialog_cancel=1</TD>
-   <TD>basedialog_ok=14</TD>
+<TR ALIGN='LEFT'>   <TD>abstractsearchablepanel_show_search=4</TD>
+   <TD>basedialog_cancel=1</TD>
+   <TD>basedialog_ok=25</TD>
    <TD>boardchooser_board_table=1</TD>
+</TR><TR ALIGN='LEFT'>   <TD>cmdmsgdialog_open_messages_view=1</TD>
    <TD>constraintschooserpanel_add_existing_or_create_new_constraints=1</TD>
-</TR><TR ALIGN='LEFT'>   <TD>constraintschooserpanel_add_files=1</TD>
+   <TD>constraintschooserpanel_add_files=1</TD>
    <TD>createsrcfiledialog_file_name=1</TD>
-   <TD>definemodulesdialog_define_modules_and_specify_io_ports=9</TD>
-   <TD>filesetpanel_file_set_panel_tree=10</TD>
-</TR><TR ALIGN='LEFT'>   <TD>flownavigatortreepanel_flow_navigator_tree=5</TD>
+</TR><TR ALIGN='LEFT'>   <TD>definemodulesdialog_define_modules_and_specify_io_ports=9</TD>
+   <TD>filesetpanel_file_set_panel_tree=31</TD>
+   <TD>flownavigatortreepanel_flow_navigator_tree=18</TD>
    <TD>gettingstartedview_create_new_project=1</TD>
-   <TD>gettingstartedview_open_project=1</TD>
-   <TD>mainmenumgr_file=2</TD>
-</TR><TR ALIGN='LEFT'>   <TD>mainmenumgr_project=1</TD>
-   <TD>pacommandnames_close_project=1</TD>
-   <TD>pacommandnames_run_bitgen=2</TD>
-   <TD>projectnamechooser_choose_project_location=1</TD>
-</TR><TR ALIGN='LEFT'>   <TD>projectnamechooser_project_name=1</TD>
-   <TD>saveprojectutils_cancel=1</TD>
+</TR><TR ALIGN='LEFT'>   <TD>gettingstartedview_open_project=1</TD>
+   <TD>mainmenumgr_file=10</TD>
+   <TD>mainmenumgr_project=5</TD>
+   <TD>mainmenumgr_view=4</TD>
+</TR><TR ALIGN='LEFT'>   <TD>mainwinmenumgr_layout=2</TD>
+   <TD>pacommandnames_auto_connect_target=2</TD>
+   <TD>pacommandnames_auto_update_hier=2</TD>
+   <TD>pacommandnames_close_project=5</TD>
+</TR><TR ALIGN='LEFT'>   <TD>pacommandnames_goto_netlist_design=1</TD>
+   <TD>pacommandnames_import_all_srcs=1</TD>
+   <TD>pacommandnames_open_hardware_manager=1</TD>
+   <TD>pacommandnames_run_bitgen=4</TD>
+</TR><TR ALIGN='LEFT'>   <TD>paviews_project_summary=2</TD>
+   <TD>programdebugtab_open_target=2</TD>
+   <TD>programdebugtab_program_device=2</TD>
+   <TD>programfpgadialog_program=2</TD>
+</TR><TR ALIGN='LEFT'>   <TD>projectnamechooser_choose_project_location=1</TD>
+   <TD>projectnamechooser_project_name=1</TD>
+   <TD>projecttab_reload=2</TD>
+   <TD>rdicommands_save_file=8</TD>
+</TR><TR ALIGN='LEFT'>   <TD>saveprojectutils_cancel=1</TD>
    <TD>saveprojectutils_save=2</TD>
    <TD>srcchooserpanel_create_file=1</TD>
+   <TD>srcmenu_ip_hierarchy=2</TD>
+</TR><TR ALIGN='LEFT'>   <TD>taskbanner_close=1</TD>
+   <TD>taskbanner_open_in_new_window=1</TD>
+   <TD>touchpointsurveydialog_no=1</TD>
 </TR>  </TABLE>
   <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
    <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>java_command_handlers</B></TD></TR>
 <TR ALIGN='LEFT'>   <TD>addsources=1</TD>
-   <TD>closeproject=1</TD>
-   <TD>newproject=1</TD>
+   <TD>autoconnecttarget=2</TD>
+   <TD>closeproject=5</TD>
+   <TD>launchprogramfpga=2</TD>
+</TR><TR ALIGN='LEFT'>   <TD>newproject=1</TD>
+   <TD>openhardwaremanager=2</TD>
    <TD>openproject=1</TD>
-</TR><TR ALIGN='LEFT'>   <TD>runbitgen=2</TD>
-   <TD>runimplementation=2</TD>
-   <TD>runsynthesis=2</TD>
-   <TD>viewtaskrtlanalysis=1</TD>
+   <TD>runbitgen=4</TD>
+</TR><TR ALIGN='LEFT'>   <TD>runimplementation=4</TD>
+   <TD>runschematic=2</TD>
+   <TD>runsynthesis=4</TD>
+   <TD>showview=1</TD>
+</TR><TR ALIGN='LEFT'>   <TD>ui.views.c.ap=1</TD>
+   <TD>viewtaskrtlanalysis=3</TD>
+   <TD>viewtasksynthesis=1</TD>
 </TR>  </TABLE>
 </TR><TR ALIGN='LEFT'>  <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
    <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>other_data</B></TD></TR>
-<TR ALIGN='LEFT'>   <TD>guimode=2</TD>
+<TR ALIGN='LEFT'>   <TD>guimode=8</TD>
 </TR>  </TABLE>
   <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
    <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>project_data</B></TD></TR>
@@ -104,17 +130,27 @@
    <TR><TD>
    <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
     <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>post_unisim_transformation</B></TD></TR>
-<TR ALIGN='LEFT'>    <TD>ibuf=3</TD>
-    <TD>lut3=1</TD>
-    <TD>obuf=1</TD>
+<TR ALIGN='LEFT'>    <TD>gnd=1</TD>
+    <TD>ibuf=3</TD>
+    <TD>lut1=2</TD>
+    <TD>lut2=1</TD>
+</TR><TR ALIGN='LEFT'>    <TD>lut3=2</TD>
+    <TD>lut4=1</TD>
+    <TD>obuf=2</TD>
+    <TD>obuft=1</TD>
 </TR>   </TABLE>
    </TD></TR>
    <TR><TD>
    <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
     <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>pre_unisim_transformation</B></TD></TR>
-<TR ALIGN='LEFT'>    <TD>ibuf=3</TD>
-    <TD>lut3=1</TD>
-    <TD>obuf=1</TD>
+<TR ALIGN='LEFT'>    <TD>gnd=1</TD>
+    <TD>ibuf=3</TD>
+    <TD>lut1=2</TD>
+    <TD>lut2=1</TD>
+</TR><TR ALIGN='LEFT'>    <TD>lut3=2</TD>
+    <TD>lut4=1</TD>
+    <TD>obuf=2</TD>
+    <TD>obuft=1</TD>
 </TR>   </TABLE>
    </TD></TR>
   </TABLE><BR>
@@ -255,9 +291,11 @@
 <TR ALIGN='LEFT'>    <TD>ibuf_functional_category=IO</TD>
     <TD>ibuf_used=3</TD>
     <TD>lut3_functional_category=LUT</TD>
-    <TD>lut3_used=1</TD>
+    <TD>lut3_used=3</TD>
 </TR><TR ALIGN='LEFT'>    <TD>obuf_functional_category=IO</TD>
-    <TD>obuf_used=1</TD>
+    <TD>obuf_used=2</TD>
+    <TD>obuft_functional_category=IO</TD>
+    <TD>obuft_used=1</TD>
 </TR>   </TABLE>
    </TD></TR>
    <TR><TD>
@@ -273,7 +311,7 @@
     <TD>f8_muxes_util_percentage=0.00</TD>
 </TR><TR ALIGN='LEFT'>    <TD>lut_as_logic_available=63400</TD>
     <TD>lut_as_logic_fixed=0</TD>
-    <TD>lut_as_logic_used=1</TD>
+    <TD>lut_as_logic_used=2</TD>
     <TD>lut_as_logic_util_percentage=&lt;0.01</TD>
 </TR><TR ALIGN='LEFT'>    <TD>lut_as_memory_available=19000</TD>
     <TD>lut_as_memory_fixed=0</TD>
@@ -289,7 +327,7 @@
     <TD>register_as_latch_util_percentage=0.00</TD>
 </TR><TR ALIGN='LEFT'>    <TD>slice_luts_available=63400</TD>
     <TD>slice_luts_fixed=0</TD>
-    <TD>slice_luts_used=1</TD>
+    <TD>slice_luts_used=2</TD>
     <TD>slice_luts_util_percentage=&lt;0.01</TD>
 </TR><TR ALIGN='LEFT'>    <TD>slice_registers_available=126800</TD>
     <TD>slice_registers_fixed=0</TD>
@@ -299,7 +337,7 @@
     <TD>lut_as_distributed_ram_used=0</TD>
     <TD>lut_as_logic_available=63400</TD>
     <TD>lut_as_logic_fixed=0</TD>
-</TR><TR ALIGN='LEFT'>    <TD>lut_as_logic_used=1</TD>
+</TR><TR ALIGN='LEFT'>    <TD>lut_as_logic_used=2</TD>
     <TD>lut_as_logic_util_percentage=&lt;0.01</TD>
     <TD>lut_as_memory_available=19000</TD>
     <TD>lut_as_memory_fixed=0</TD>
@@ -307,24 +345,31 @@
     <TD>lut_as_memory_util_percentage=0.00</TD>
     <TD>lut_as_shift_register_fixed=0</TD>
     <TD>lut_as_shift_register_used=0</TD>
-</TR><TR ALIGN='LEFT'>    <TD>lut_flip_flop_pairs_available=63400</TD>
-    <TD>lut_flip_flop_pairs_fixed=0</TD>
-    <TD>lut_flip_flop_pairs_used=0</TD>
-    <TD>lut_flip_flop_pairs_util_percentage=0.00</TD>
+</TR><TR ALIGN='LEFT'>    <TD>register_driven_from_outside_the_slice_fixed=0</TD>
+    <TD>register_driven_from_outside_the_slice_used=0</TD>
+    <TD>register_driven_from_within_the_slice_fixed=0</TD>
+    <TD>register_driven_from_within_the_slice_used=0</TD>
 </TR><TR ALIGN='LEFT'>    <TD>slice_available=15850</TD>
     <TD>slice_fixed=0</TD>
+    <TD>slice_registers_available=126800</TD>
+    <TD>slice_registers_fixed=0</TD>
+</TR><TR ALIGN='LEFT'>    <TD>slice_registers_used=0</TD>
+    <TD>slice_registers_util_percentage=0.00</TD>
     <TD>slice_used=1</TD>
     <TD>slice_util_percentage=&lt;0.01</TD>
 </TR><TR ALIGN='LEFT'>    <TD>slicel_fixed=0</TD>
     <TD>slicel_used=1</TD>
     <TD>slicem_fixed=0</TD>
     <TD>slicem_used=0</TD>
-</TR><TR ALIGN='LEFT'>    <TD>unique_control_sets_used=0</TD>
-    <TD>using_o5_and_o6_fixed=0</TD>
-    <TD>using_o5_and_o6_used=0</TD>
-    <TD>using_o5_output_only_fixed=0</TD>
-</TR><TR ALIGN='LEFT'>    <TD>using_o5_output_only_used=0</TD>
-    <TD>using_o6_output_only_fixed=0</TD>
+</TR><TR ALIGN='LEFT'>    <TD>unique_control_sets_available=15850</TD>
+    <TD>unique_control_sets_fixed=15850</TD>
+    <TD>unique_control_sets_used=0</TD>
+    <TD>unique_control_sets_util_percentage=0.00</TD>
+</TR><TR ALIGN='LEFT'>    <TD>using_o5_and_o6_fixed=0.00</TD>
+    <TD>using_o5_and_o6_used=1</TD>
+    <TD>using_o5_output_only_fixed=1</TD>
+    <TD>using_o5_output_only_used=0</TD>
+</TR><TR ALIGN='LEFT'>    <TD>using_o6_output_only_fixed=0</TD>
     <TD>using_o6_output_only_used=1</TD>
 </TR>   </TABLE>
    </TD></TR>
@@ -367,37 +412,6 @@
     <TD>xadc_fixed=0</TD>
     <TD>xadc_used=0</TD>
     <TD>xadc_util_percentage=0.00</TD>
-</TR>   </TABLE>
-   </TD></TR>
-  </TABLE><BR>
- <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
-  <TR ALIGN='CENTER' BGCOLOR='#A7BFDE'><TD COLSPAN='1'><B>router</B></TD></TR>
-   <TR><TD>
-   <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
-    <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>usage</B></TD></TR>
-<TR ALIGN='LEFT'>    <TD>actual_expansions=503</TD>
-    <TD>bogomips=0</TD>
-    <TD>bram18=0</TD>
-    <TD>bram36=0</TD>
-</TR><TR ALIGN='LEFT'>    <TD>bufg=0</TD>
-    <TD>bufr=0</TD>
-    <TD>ctrls=0</TD>
-    <TD>dsp=0</TD>
-</TR><TR ALIGN='LEFT'>    <TD>effort=2</TD>
-    <TD>estimated_expansions=5202</TD>
-    <TD>ff=0</TD>
-    <TD>global_clocks=0</TD>
-</TR><TR ALIGN='LEFT'>    <TD>high_fanout_nets=0</TD>
-    <TD>iob=4</TD>
-    <TD>lut=1</TD>
-    <TD>movable_instances=5</TD>
-</TR><TR ALIGN='LEFT'>    <TD>nets=8</TD>
-    <TD>pins=12</TD>
-    <TD>pll=0</TD>
-    <TD>router_runtime=0.000000</TD>
-</TR><TR ALIGN='LEFT'>    <TD>router_timing_driven=1</TD>
-    <TD>threads=2</TD>
-    <TD>timing_constraints_exist=1</TD>
 </TR>   </TABLE>
    </TD></TR>
   </TABLE><BR>
@@ -445,10 +459,10 @@
    <TR><TD>
    <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
     <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>usage</B></TD></TR>
-<TR ALIGN='LEFT'>    <TD>elapsed=00:00:26s</TD>
+<TR ALIGN='LEFT'>    <TD>elapsed=00:00:19s</TD>
     <TD>hls_ip=0</TD>
-    <TD>memory_gain=496.078MB</TD>
-    <TD>memory_peak=754.816MB</TD>
+    <TD>memory_gain=511.004MB</TD>
+    <TD>memory_peak=761.469MB</TD>
 </TR>   </TABLE>
    </TD></TR>
   </TABLE><BR>
