--- a/-4LotsOfGates/project_2/project_1.runs/impl_1/usage_statistics_webtalk.html
+++ b/-4LotsOfGates/project_2/project_1.runs/impl_1/usage_statistics_webtalk.html
@@ -4,12 +4,12 @@
   <TR ALIGN='CENTER' BGCOLOR='#A7BFDE'><TD COLSPAN='4'><B>software_version_and_target_device</B></TD></TR>
 <TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>beta</B></TD><TD>FALSE</TD>
   <TD BGCOLOR='#DBE5F1'><B>build_version</B></TD><TD>2405991</TD>
-</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>date_generated</B></TD><TD>Mon Feb 11 15:42:14 2019</TD>
+</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>date_generated</B></TD><TD>Mon Feb 18 14:57:03 2019</TD>
   <TD BGCOLOR='#DBE5F1'><B>os_platform</B></TD><TD>WIN64</TD>
 </TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>product_version</B></TD><TD>Vivado v2018.3 (64-bit)</TD>
   <TD BGCOLOR='#DBE5F1'><B>project_id</B></TD><TD>3d08988641114baca36408aaa5bc9a04</TD>
-</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>project_iteration</B></TD><TD>3</TD>
-  <TD BGCOLOR='#DBE5F1'><B>random_id</B></TD><TD>410e7a312d77514195a5e55875e20b9d</TD>
+</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>project_iteration</B></TD><TD>4</TD>
+  <TD BGCOLOR='#DBE5F1'><B>random_id</B></TD><TD>6db81c391df8527597540db89e09d88c</TD>
 </TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>registration_id</B></TD><TD>211368238_0_0_330</TD>
   <TD BGCOLOR='#DBE5F1'><B>route_design</B></TD><TD>TRUE</TD>
 </TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>target_device</B></TD><TD>xc7a100t</TD>
@@ -34,18 +34,18 @@
 <TR ALIGN='LEFT'>   <TD>abstractsearchablepanel_show_search=2</TD>
    <TD>basedialog_apply=1</TD>
    <TD>basedialog_cancel=2</TD>
-   <TD>basedialog_ok=22</TD>
+   <TD>basedialog_ok=31</TD>
 </TR><TR ALIGN='LEFT'>   <TD>boardchooser_board_table=2</TD>
-   <TD>closeplanner_yes=2</TD>
+   <TD>closeplanner_yes=4</TD>
    <TD>configurebitstreamdialog_toc_list=7</TD>
    <TD>constraintschooserpanel_add_existing_or_create_new_constraints=1</TD>
 </TR><TR ALIGN='LEFT'>   <TD>constraintschooserpanel_add_files=1</TD>
    <TD>expruntreepanel_exp_run_tree_table=2</TD>
-   <TD>filesetpanel_file_set_panel_tree=21</TD>
+   <TD>filesetpanel_file_set_panel_tree=30</TD>
    <TD>findview_collapse_all=1</TD>
 </TR><TR ALIGN='LEFT'>   <TD>findview_expand_all=1</TD>
    <TD>findview_group_by_hierarchy=3</TD>
-   <TD>flownavigatortreepanel_flow_navigator_tree=102</TD>
+   <TD>flownavigatortreepanel_flow_navigator_tree=108</TD>
    <TD>gettingstartedview_create_new_project=2</TD>
 </TR><TR ALIGN='LEFT'>   <TD>gettingstartedview_open_project=1</TD>
    <TD>graphicalview_previous=2</TD>
@@ -55,17 +55,17 @@
    <TD>instanceproppanels_lut_or_rom_table=1</TD>
    <TD>instancetablepanel_instance_table=19</TD>
    <TD>instancetreetablepanel_instance_tree_table=7</TD>
-</TR><TR ALIGN='LEFT'>   <TD>mainmenumgr_checkpoint=4</TD>
-   <TD>mainmenumgr_constraints=4</TD>
+</TR><TR ALIGN='LEFT'>   <TD>mainmenumgr_checkpoint=6</TD>
+   <TD>mainmenumgr_constraints=7</TD>
    <TD>mainmenumgr_export=2</TD>
-   <TD>mainmenumgr_file=6</TD>
+   <TD>mainmenumgr_file=10</TD>
 </TR><TR ALIGN='LEFT'>   <TD>mainmenumgr_floorplanning=3</TD>
    <TD>mainmenumgr_help=4</TD>
    <TD>mainmenumgr_import=2</TD>
    <TD>mainmenumgr_io=2</TD>
 </TR><TR ALIGN='LEFT'>   <TD>mainmenumgr_io_planning=3</TD>
-   <TD>mainmenumgr_ip=3</TD>
-   <TD>mainmenumgr_project=3</TD>
+   <TD>mainmenumgr_ip=4</TD>
+   <TD>mainmenumgr_project=5</TD>
    <TD>mainmenumgr_reports=6</TD>
 </TR><TR ALIGN='LEFT'>   <TD>mainmenumgr_text_editor=2</TD>
    <TD>mainmenumgr_timing=5</TD>
@@ -76,84 +76,85 @@
    <TD>netlistschematicview_show_io_ports_in_this_schematic=2</TD>
    <TD>netlistschematicview_show_nets_in_this_schematic=1</TD>
 </TR><TR ALIGN='LEFT'>   <TD>netlisttreeview_netlist_tree=43</TD>
-   <TD>pacommandnames_auto_fit_selection=1</TD>
-   <TD>pacommandnames_close_project=3</TD>
+   <TD>pacommandnames_auto_fit_selection=2</TD>
+   <TD>pacommandnames_close_project=4</TD>
    <TD>pacommandnames_config_bitstream=1</TD>
-</TR><TR ALIGN='LEFT'>   <TD>pacommandnames_fed_toggle_routing_resources=3</TD>
+</TR><TR ALIGN='LEFT'>   <TD>pacommandnames_fed_toggle_routing_resources=5</TD>
    <TD>pacommandnames_goto_instantiation=12</TD>
-   <TD>pacommandnames_goto_netlist_design=2</TD>
+   <TD>pacommandnames_goto_netlist_design=3</TD>
    <TD>pacommandnames_reports_window=2</TD>
 </TR><TR ALIGN='LEFT'>   <TD>pacommandnames_resource_utilization=1</TD>
    <TD>pacommandnames_run_bitgen=2</TD>
    <TD>pacommandnames_schematic=4</TD>
    <TD>pacommandnames_select_area=8</TD>
 </TR><TR ALIGN='LEFT'>   <TD>pacommandnames_video_help=1</TD>
-   <TD>pacommandnames_zoom_fit=2</TD>
+   <TD>pacommandnames_zoom_fit=4</TD>
    <TD>pacommandnames_zoom_in=2</TD>
    <TD>pacommandnames_zoom_out=15</TD>
 </TR><TR ALIGN='LEFT'>   <TD>paviews_code=2</TD>
-   <TD>paviews_device=36</TD>
+   <TD>paviews_device=40</TD>
    <TD>paviews_project_summary=1</TD>
-   <TD>paviews_schematic=36</TD>
+   <TD>paviews_schematic=37</TD>
 </TR><TR ALIGN='LEFT'>   <TD>paviews_tcl_object_view=3</TD>
    <TD>projectnamechooser_choose_project_location=2</TD>
    <TD>projectnamechooser_project_name=2</TD>
    <TD>projecttab_reload=3</TD>
 </TR><TR ALIGN='LEFT'>   <TD>rdicommands_custom_commands=2</TD>
+   <TD>rdicommands_line_comment=1</TD>
    <TD>rdicommands_properties=9</TD>
-   <TD>rdicommands_save_file=4</TD>
-   <TD>rdicommands_toggle_description_area_display=5</TD>
-</TR><TR ALIGN='LEFT'>   <TD>reportutiltab_report_utilization_navigation_tree=23</TD>
+   <TD>rdicommands_save_file=10</TD>
+</TR><TR ALIGN='LEFT'>   <TD>rdicommands_toggle_description_area_display=5</TD>
+   <TD>reportutiltab_report_utilization_navigation_tree=23</TD>
    <TD>saveprojectutils_save=1</TD>
    <TD>selectmenu_highlight=14</TD>
-   <TD>selectmenu_mark=13</TD>
-</TR><TR ALIGN='LEFT'>   <TD>selectviospecpanel_check_box_tree=8</TD>
+</TR><TR ALIGN='LEFT'>   <TD>selectmenu_mark=13</TD>
+   <TD>selectviospecpanel_check_box_tree=8</TD>
    <TD>srcchooserpanel_add_hdl_and_netlist_files_to_your_project=1</TD>
    <TD>srcchooserpanel_add_or_create_source_file=1</TD>
-   <TD>taskbanner_close=1</TD>
-</TR><TR ALIGN='LEFT'>   <TD>tclobjecttreetable_treetable=15</TD>
+</TR><TR ALIGN='LEFT'>   <TD>taskbanner_close=1</TD>
+   <TD>tclobjecttreetable_treetable=15</TD>
    <TD>tclobjectview_add_properties=1</TD>
    <TD>tclobjectview_show_or_flatten_all_property_hierarchies=2</TD>
-   <TD>tclobjectview_sort_properties=2</TD>
-</TR><TR ALIGN='LEFT'>   <TD>utilizationhierviewtreetablepanel_table(hierarchy)=1</TD>
+</TR><TR ALIGN='LEFT'>   <TD>tclobjectview_sort_properties=2</TD>
+   <TD>utilizationhierviewtreetablepanel_table(hierarchy)=1</TD>
    <TD>utilizationinsttreetablepanel_utilization_inst_tree_table(slice luts)=3</TD>
 </TR>  </TABLE>
   <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
    <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>java_command_handlers</B></TD></TR>
-<TR ALIGN='LEFT'>   <TD>closeproject=3</TD>
+<TR ALIGN='LEFT'>   <TD>closeproject=4</TD>
    <TD>configurebitstream=1</TD>
    <TD>editcopy=1</TD>
    <TD>editproperties=9</TD>
-</TR><TR ALIGN='LEFT'>   <TD>fedtoggleroutingresourcescmdhandler=3</TD>
+</TR><TR ALIGN='LEFT'>   <TD>fedtoggleroutingresourcescmdhandler=5</TD>
    <TD>newproject=2</TD>
    <TD>openhardwaremanager=1</TD>
    <TD>openproject=1</TD>
 </TR><TR ALIGN='LEFT'>   <TD>reportdrc=1</TD>
    <TD>reportmethodology=1</TD>
    <TD>reportutilization=3</TD>
-   <TD>runbitgen=3</TD>
-</TR><TR ALIGN='LEFT'>   <TD>runimplementation=6</TD>
+   <TD>runbitgen=4</TD>
+</TR><TR ALIGN='LEFT'>   <TD>runimplementation=7</TD>
    <TD>runpowerestimation=1</TD>
-   <TD>runschematic=57</TD>
-   <TD>runsynthesis=6</TD>
+   <TD>runschematic=58</TD>
+   <TD>runsynthesis=7</TD>
 </TR><TR ALIGN='LEFT'>   <TD>showpowerestimation=2</TD>
    <TD>showsource=12</TD>
    <TD>showview=4</TD>
    <TD>timingconstraintswizard=2</TD>
 </TR><TR ALIGN='LEFT'>   <TD>toggle_description_area=5</TD>
-   <TD>toggleautofitselection=1</TD>
+   <TD>toggleautofitselection=2</TD>
    <TD>toggleselectareamode=8</TD>
    <TD>viewlayoutcmd=1</TD>
-</TR><TR ALIGN='LEFT'>   <TD>viewtaskimplementation=4</TD>
-   <TD>viewtaskrtlanalysis=3</TD>
-   <TD>viewtasksynthesis=6</TD>
-   <TD>zoomfit=2</TD>
+</TR><TR ALIGN='LEFT'>   <TD>viewtaskimplementation=5</TD>
+   <TD>viewtaskrtlanalysis=5</TD>
+   <TD>viewtasksynthesis=7</TD>
+   <TD>zoomfit=4</TD>
 </TR><TR ALIGN='LEFT'>   <TD>zoomin=1</TD>
    <TD>zoomout=11</TD>
 </TR>  </TABLE>
 </TR><TR ALIGN='LEFT'>  <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
    <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>other_data</B></TD></TR>
-<TR ALIGN='LEFT'>   <TD>guimode=5</TD>
+<TR ALIGN='LEFT'>   <TD>guimode=7</TD>
 </TR>  </TABLE>
   <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
    <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>project_data</B></TD></TR>
@@ -193,16 +194,16 @@
    <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
     <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>post_unisim_transformation</B></TD></TR>
 <TR ALIGN='LEFT'>    <TD>ibuf=3</TD>
-    <TD>lut3=2</TD>
-    <TD>obuf=2</TD>
+    <TD>lut2=3</TD>
+    <TD>obuf=4</TD>
 </TR>   </TABLE>
    </TD></TR>
    <TR><TD>
    <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
     <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>pre_unisim_transformation</B></TD></TR>
 <TR ALIGN='LEFT'>    <TD>ibuf=3</TD>
-    <TD>lut3=2</TD>
-    <TD>obuf=2</TD>
+    <TD>lut2=3</TD>
+    <TD>obuf=4</TD>
 </TR>   </TABLE>
    </TD></TR>
   </TABLE><BR>
@@ -336,10 +337,10 @@
     <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>primitives</B></TD></TR>
 <TR ALIGN='LEFT'>    <TD>ibuf_functional_category=IO</TD>
     <TD>ibuf_used=3</TD>
-    <TD>lut3_functional_category=LUT</TD>
-    <TD>lut3_used=2</TD>
+    <TD>lut2_functional_category=LUT</TD>
+    <TD>lut2_used=3</TD>
 </TR><TR ALIGN='LEFT'>    <TD>obuf_functional_category=IO</TD>
-    <TD>obuf_used=2</TD>
+    <TD>obuf_used=4</TD>
 </TR>   </TABLE>
    </TD></TR>
    <TR><TD>
@@ -355,7 +356,7 @@
     <TD>f8_muxes_util_percentage=0.00</TD>
 </TR><TR ALIGN='LEFT'>    <TD>lut_as_logic_available=63400</TD>
     <TD>lut_as_logic_fixed=0</TD>
-    <TD>lut_as_logic_used=1</TD>
+    <TD>lut_as_logic_used=2</TD>
     <TD>lut_as_logic_util_percentage=&lt;0.01</TD>
 </TR><TR ALIGN='LEFT'>    <TD>lut_as_memory_available=19000</TD>
     <TD>lut_as_memory_fixed=0</TD>
@@ -371,7 +372,7 @@
     <TD>register_as_latch_util_percentage=0.00</TD>
 </TR><TR ALIGN='LEFT'>    <TD>slice_luts_available=63400</TD>
     <TD>slice_luts_fixed=0</TD>
-    <TD>slice_luts_used=1</TD>
+    <TD>slice_luts_used=2</TD>
     <TD>slice_luts_util_percentage=&lt;0.01</TD>
 </TR><TR ALIGN='LEFT'>    <TD>slice_registers_available=126800</TD>
     <TD>slice_registers_fixed=0</TD>
@@ -381,7 +382,7 @@
     <TD>lut_as_distributed_ram_used=0</TD>
     <TD>lut_as_logic_available=63400</TD>
     <TD>lut_as_logic_fixed=0</TD>
-</TR><TR ALIGN='LEFT'>    <TD>lut_as_logic_used=1</TD>
+</TR><TR ALIGN='LEFT'>    <TD>lut_as_logic_used=2</TD>
     <TD>lut_as_logic_util_percentage=&lt;0.01</TD>
     <TD>lut_as_memory_available=19000</TD>
     <TD>lut_as_memory_fixed=0</TD>
@@ -399,10 +400,10 @@
     <TD>slice_registers_fixed=0</TD>
 </TR><TR ALIGN='LEFT'>    <TD>slice_registers_used=0</TD>
     <TD>slice_registers_util_percentage=0.00</TD>
-    <TD>slice_used=1</TD>
-    <TD>slice_util_percentage=&lt;0.01</TD>
+    <TD>slice_used=2</TD>
+    <TD>slice_util_percentage=0.01</TD>
 </TR><TR ALIGN='LEFT'>    <TD>slicel_fixed=0</TD>
-    <TD>slicel_used=1</TD>
+    <TD>slicel_used=2</TD>
     <TD>slicem_fixed=0</TD>
     <TD>slicem_used=0</TD>
 </TR><TR ALIGN='LEFT'>    <TD>unique_control_sets_available=15850</TD>
@@ -414,7 +415,7 @@
     <TD>using_o5_output_only_fixed=1</TD>
     <TD>using_o5_output_only_used=0</TD>
 </TR><TR ALIGN='LEFT'>    <TD>using_o6_output_only_fixed=0</TD>
-    <TD>using_o6_output_only_used=0</TD>
+    <TD>using_o6_output_only_used=1</TD>
 </TR>   </TABLE>
    </TD></TR>
    <TR><TD>
@@ -503,10 +504,10 @@
    <TR><TD>
    <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
     <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>usage</B></TD></TR>
-<TR ALIGN='LEFT'>    <TD>elapsed=00:00:22s</TD>
+<TR ALIGN='LEFT'>    <TD>elapsed=00:00:23s</TD>
     <TD>hls_ip=0</TD>
-    <TD>memory_gain=512.152MB</TD>
-    <TD>memory_peak=774.691MB</TD>
+    <TD>memory_gain=505.926MB</TD>
+    <TD>memory_peak=768.570MB</TD>
 </TR>   </TABLE>
    </TD></TR>
   </TABLE><BR>
