--- a/-5MuxOfMux/5Lut_Mux/Lut_Mux.runs/impl_1/usage_statistics_webtalk.html
+++ b/-5MuxOfMux/5Lut_Mux/Lut_Mux.runs/impl_1/usage_statistics_webtalk.html
@@ -4,13 +4,13 @@
   <TR ALIGN='CENTER' BGCOLOR='#A7BFDE'><TD COLSPAN='4'><B>software_version_and_target_device</B></TD></TR>
 <TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>beta</B></TD><TD>FALSE</TD>
   <TD BGCOLOR='#DBE5F1'><B>build_version</B></TD><TD>2405991</TD>
-</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>date_generated</B></TD><TD>Thu Feb  7 07:53:52 2019</TD>
+</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>date_generated</B></TD><TD>Wed Feb 27 15:02:57 2019</TD>
   <TD BGCOLOR='#DBE5F1'><B>os_platform</B></TD><TD>WIN64</TD>
 </TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>product_version</B></TD><TD>Vivado v2018.3 (64-bit)</TD>
   <TD BGCOLOR='#DBE5F1'><B>project_id</B></TD><TD>8a5b1faf9dd346c78c44b1066b7b0ee7</TD>
-</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>project_iteration</B></TD><TD>1</TD>
-  <TD BGCOLOR='#DBE5F1'><B>random_id</B></TD><TD>4764556772d65ac8b6c7b59b2023021d</TD>
-</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>registration_id</B></TD><TD>4764556772d65ac8b6c7b59b2023021d</TD>
+</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>project_iteration</B></TD><TD>2</TD>
+  <TD BGCOLOR='#DBE5F1'><B>random_id</B></TD><TD>9883fbb9bea1598596bf1c76682531eb</TD>
+</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>registration_id</B></TD><TD>211368238_0_0_330</TD>
   <TD BGCOLOR='#DBE5F1'><B>route_design</B></TD><TD>TRUE</TD>
 </TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>target_device</B></TD><TD>xc7a100t</TD>
   <TD BGCOLOR='#DBE5F1'><B>target_family</B></TD><TD>artix7</TD>
@@ -20,8 +20,8 @@
 </TR> </TABLE><BR>
  <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
   <TR ALIGN='CENTER' BGCOLOR='#A7BFDE'><TD COLSPAN='4'><B>user_environment</B></TD></TR>
-<TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>cpu_name</B></TD><TD>Intel(R) Core(TM) i7-7700K CPU @ 4.20GHz</TD>
-  <TD BGCOLOR='#DBE5F1'><B>cpu_speed</B></TD><TD>4200 MHz</TD>
+<TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>cpu_name</B></TD><TD>Intel(R) Core(TM) i5-6500 CPU @ 3.20GHz</TD>
+  <TD BGCOLOR='#DBE5F1'><B>cpu_speed</B></TD><TD>3192 MHz</TD>
 </TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>os_name</B></TD><TD>Microsoft Windows 8 or later , 64-bit</TD>
   <TD BGCOLOR='#DBE5F1'><B>os_release</B></TD><TD>major release  (build 9200)</TD>
 </TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>system_ram</B></TD><TD>8.000 GB</TD>
@@ -31,30 +31,54 @@
   <TR ALIGN='CENTER' BGCOLOR='#A7BFDE'><TD COLSPAN='4'><B>vivado_usage</B></TD></TR>
 <TR ALIGN='LEFT'>  <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
    <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>gui_handlers</B></TD></TR>
-<TR ALIGN='LEFT'>   <TD>basedialog_ok=5</TD>
+<TR ALIGN='LEFT'>   <TD>basedialog_cancel=1</TD>
+   <TD>basedialog_ok=14</TD>
    <TD>boardchooser_board_table=1</TD>
-   <TD>constraintschooserpanel_add_existing_or_create_new_constraints=1</TD>
+   <TD>closeplanner_yes=2</TD>
+</TR><TR ALIGN='LEFT'>   <TD>constraintschooserpanel_add_existing_or_create_new_constraints=1</TD>
    <TD>constraintschooserpanel_add_files=1</TD>
-</TR><TR ALIGN='LEFT'>   <TD>filesetpanel_file_set_panel_tree=5</TD>
-   <TD>flownavigatortreepanel_flow_navigator_tree=2</TD>
+   <TD>deviceview_show_cell_connections=1</TD>
+   <TD>filesetpanel_file_set_panel_tree=12</TD>
+</TR><TR ALIGN='LEFT'>   <TD>flownavigatortreepanel_flow_navigator_tree=11</TD>
    <TD>gettingstartedview_create_new_project=1</TD>
+   <TD>gettingstartedview_open_project=1</TD>
+   <TD>mainmenumgr_constraints=1</TD>
+</TR><TR ALIGN='LEFT'>   <TD>mainmenumgr_file=4</TD>
+   <TD>mainmenumgr_project=2</TD>
+   <TD>netlisttreeview_netlist_tree=11</TD>
+   <TD>pacommandnames_auto_fit_selection=1</TD>
+</TR><TR ALIGN='LEFT'>   <TD>pacommandnames_close_project=2</TD>
+   <TD>pacommandnames_fed_toggle_routing_resources=2</TD>
+   <TD>pacommandnames_goto_netlist_design=1</TD>
    <TD>pacommandnames_run_bitgen=1</TD>
-</TR><TR ALIGN='LEFT'>   <TD>projectnamechooser_project_name=1</TD>
-   <TD>rdicommands_save_file=3</TD>
+</TR><TR ALIGN='LEFT'>   <TD>pacommandnames_zoom_out=3</TD>
+   <TD>pagraphicalviewutils_hide_all=1</TD>
+   <TD>paviews_device=22</TD>
+   <TD>projectnamechooser_project_name=1</TD>
+</TR><TR ALIGN='LEFT'>   <TD>rdicommands_save_file=3</TD>
    <TD>srcchooserpanel_add_hdl_and_netlist_files_to_your_project=1</TD>
    <TD>srcchooserpanel_add_or_create_source_file=1</TD>
+   <TD>syntheticagettingstartedview_recent_projects=1</TD>
 </TR>  </TABLE>
   <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
    <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>java_command_handlers</B></TD></TR>
-<TR ALIGN='LEFT'>   <TD>newproject=1</TD>
-   <TD>runbitgen=1</TD>
-   <TD>runimplementation=1</TD>
-   <TD>runsynthesis=1</TD>
-</TR><TR ALIGN='LEFT'>   <TD>viewtaskrtlanalysis=1</TD>
+<TR ALIGN='LEFT'>   <TD>closeproject=2</TD>
+   <TD>fedtoggleroutingresourcescmdhandler=2</TD>
+   <TD>newproject=1</TD>
+   <TD>openproject=1</TD>
+</TR><TR ALIGN='LEFT'>   <TD>runbitgen=2</TD>
+   <TD>runimplementation=2</TD>
+   <TD>runschematic=2</TD>
+   <TD>runsynthesis=2</TD>
+</TR><TR ALIGN='LEFT'>   <TD>toggleautofitselection=1</TD>
+   <TD>viewtaskimplementation=2</TD>
+   <TD>viewtaskrtlanalysis=2</TD>
+   <TD>viewtasksynthesis=1</TD>
+</TR><TR ALIGN='LEFT'>   <TD>zoomout=3</TD>
 </TR>  </TABLE>
 </TR><TR ALIGN='LEFT'>  <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
    <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>other_data</B></TD></TR>
-<TR ALIGN='LEFT'>   <TD>guimode=1</TD>
+<TR ALIGN='LEFT'>   <TD>guimode=3</TD>
 </TR>  </TABLE>
   <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
    <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>project_data</B></TD></TR>
@@ -412,10 +436,10 @@
    <TR><TD>
    <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
     <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>usage</B></TD></TR>
-<TR ALIGN='LEFT'>    <TD>elapsed=00:00:16s</TD>
+<TR ALIGN='LEFT'>    <TD>elapsed=00:00:23s</TD>
     <TD>hls_ip=0</TD>
-    <TD>memory_gain=476.305MB</TD>
-    <TD>memory_peak=728.801MB</TD>
+    <TD>memory_gain=493.035MB</TD>
+    <TD>memory_peak=756.012MB</TD>
 </TR>   </TABLE>
    </TD></TR>
   </TABLE><BR>
