--- a/11IP/2_Square_Root_IP/SquareRootIP.runs/impl_1/usage_statistics_webtalk.html
+++ b/11IP/2_Square_Root_IP/SquareRootIP.runs/impl_1/usage_statistics_webtalk.html
@@ -4,13 +4,13 @@
   <TR ALIGN='CENTER' BGCOLOR='#A7BFDE'><TD COLSPAN='4'><B>software_version_and_target_device</B></TD></TR>
 <TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>beta</B></TD><TD>FALSE</TD>
   <TD BGCOLOR='#DBE5F1'><B>build_version</B></TD><TD>2405991</TD>
-</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>date_generated</B></TD><TD>Sat Mar  9 14:15:24 2019</TD>
+</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>date_generated</B></TD><TD>Mon Apr  8 16:21:16 2019</TD>
   <TD BGCOLOR='#DBE5F1'><B>os_platform</B></TD><TD>WIN64</TD>
 </TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>product_version</B></TD><TD>Vivado v2018.3 (64-bit)</TD>
   <TD BGCOLOR='#DBE5F1'><B>project_id</B></TD><TD>dcca1c43d72d40368c5b4b05e7bbf9d0</TD>
-</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>project_iteration</B></TD><TD>16</TD>
-  <TD BGCOLOR='#DBE5F1'><B>random_id</B></TD><TD>4764556772d65ac8b6c7b59b2023021d</TD>
-</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>registration_id</B></TD><TD>4764556772d65ac8b6c7b59b2023021d</TD>
+</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>project_iteration</B></TD><TD>17</TD>
+  <TD BGCOLOR='#DBE5F1'><B>random_id</B></TD><TD>584d33e6674d5ddc8ccd42416ec78569</TD>
+</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>registration_id</B></TD><TD>211368238_0_0_330</TD>
   <TD BGCOLOR='#DBE5F1'><B>route_design</B></TD><TD>TRUE</TD>
 </TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>target_device</B></TD><TD>xc7a100t</TD>
   <TD BGCOLOR='#DBE5F1'><B>target_family</B></TD><TD>artix7</TD>
@@ -20,8 +20,8 @@
 </TR> </TABLE><BR>
  <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
   <TR ALIGN='CENTER' BGCOLOR='#A7BFDE'><TD COLSPAN='4'><B>user_environment</B></TD></TR>
-<TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>cpu_name</B></TD><TD>Intel(R) Core(TM) i7-7700K CPU @ 4.20GHz</TD>
-  <TD BGCOLOR='#DBE5F1'><B>cpu_speed</B></TD><TD>4200 MHz</TD>
+<TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>cpu_name</B></TD><TD>Intel(R) Core(TM) i5-6500 CPU @ 3.20GHz</TD>
+  <TD BGCOLOR='#DBE5F1'><B>cpu_speed</B></TD><TD>3192 MHz</TD>
 </TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>os_name</B></TD><TD>Microsoft Windows 8 or later , 64-bit</TD>
   <TD BGCOLOR='#DBE5F1'><B>os_release</B></TD><TD>major release  (build 9200)</TD>
 </TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>system_ram</B></TD><TD>8.000 GB</TD>
@@ -33,8 +33,8 @@
    <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>gui_handlers</B></TD></TR>
 <TR ALIGN='LEFT'>   <TD>addsrcwizard_specify_hdl_netlist_block_design=1</TD>
    <TD>addsrcwizard_specify_or_create_constraint_files=1</TD>
-   <TD>basedialog_cancel=2</TD>
-   <TD>basedialog_ok=33</TD>
+   <TD>basedialog_cancel=3</TD>
+   <TD>basedialog_ok=42</TD>
 </TR><TR ALIGN='LEFT'>   <TD>basedialog_yes=3</TD>
    <TD>boardchooser_board_table=1</TD>
    <TD>cmdmsgdialog_ok=3</TD>
@@ -46,34 +46,34 @@
 </TR><TR ALIGN='LEFT'>   <TD>customizecoredialog_documentation=2</TD>
    <TD>definemodulesdialog_define_modules_and_specify_io_ports=20</TD>
    <TD>filesetpanel_enable_core_container=1</TD>
-   <TD>filesetpanel_file_set_panel_tree=85</TD>
-</TR><TR ALIGN='LEFT'>   <TD>flownavigatortreepanel_flow_navigator_tree=42</TD>
+   <TD>filesetpanel_file_set_panel_tree=106</TD>
+</TR><TR ALIGN='LEFT'>   <TD>flownavigatortreepanel_flow_navigator_tree=46</TD>
    <TD>gettingstartedview_create_new_project=1</TD>
    <TD>hardwaretreepanel_hardware_tree_table=12</TD>
-   <TD>mainmenumgr_file=4</TD>
-</TR><TR ALIGN='LEFT'>   <TD>mainmenumgr_project=2</TD>
+   <TD>mainmenumgr_file=6</TD>
+</TR><TR ALIGN='LEFT'>   <TD>mainmenumgr_project=3</TD>
    <TD>msgtreepanel_message_view_tree=4</TD>
    <TD>msgview_clear_messages_resulting_from_user_executed=1</TD>
    <TD>msgview_warning_messages=2</TD>
 </TR><TR ALIGN='LEFT'>   <TD>openfileaction_cancel=1</TD>
-   <TD>pacommandnames_auto_connect_target=4</TD>
-   <TD>pacommandnames_close_project=2</TD>
+   <TD>pacommandnames_auto_connect_target=5</TD>
+   <TD>pacommandnames_close_project=3</TD>
    <TD>pacommandnames_open_hardware_manager=6</TD>
-</TR><TR ALIGN='LEFT'>   <TD>pacommandnames_run_bitgen=1</TD>
+</TR><TR ALIGN='LEFT'>   <TD>pacommandnames_run_bitgen=2</TD>
    <TD>pacommandnames_show_product_guide=2</TD>
    <TD>pacommandnames_zoom_fit=1</TD>
    <TD>paviews_code=1</TD>
 </TR><TR ALIGN='LEFT'>   <TD>paviews_ip_catalog=1</TD>
-   <TD>paviews_project_summary=12</TD>
-   <TD>programdebugtab_open_target=4</TD>
-   <TD>programdebugtab_program_device=16</TD>
-</TR><TR ALIGN='LEFT'>   <TD>programfpgadialog_program=16</TD>
+   <TD>paviews_project_summary=13</TD>
+   <TD>programdebugtab_open_target=5</TD>
+   <TD>programdebugtab_program_device=18</TD>
+</TR><TR ALIGN='LEFT'>   <TD>programfpgadialog_program=18</TD>
    <TD>projectnamechooser_choose_project_location=1</TD>
    <TD>projectnamechooser_project_name=1</TD>
    <TD>projecttab_reload=9</TD>
 </TR><TR ALIGN='LEFT'>   <TD>rdicommands_delete=1</TD>
    <TD>rdicommands_save_file=36</TD>
-   <TD>saveprojectutils_save=4</TD>
+   <TD>saveprojectutils_save=5</TD>
    <TD>schematicview_previous=10</TD>
 </TR><TR ALIGN='LEFT'>   <TD>simpleoutputproductdialog_generate_output_products_immediately=3</TD>
    <TD>srcchooserpanel_add_hdl_and_netlist_files_to_your_project=2</TD>
@@ -85,28 +85,29 @@
   <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
    <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>java_command_handlers</B></TD></TR>
 <TR ALIGN='LEFT'>   <TD>addsources=3</TD>
-   <TD>autoconnecttarget=4</TD>
-   <TD>closeproject=2</TD>
-   <TD>coreview=2</TD>
+   <TD>autoconnecttarget=5</TD>
+   <TD>closeproject=3</TD>
+   <TD>coreview=3</TD>
 </TR><TR ALIGN='LEFT'>   <TD>customizecore=1</TD>
    <TD>editdelete=1</TD>
-   <TD>launchprogramfpga=16</TD>
+   <TD>launchprogramfpga=18</TD>
    <TD>newhardwaredashboard=1</TD>
 </TR><TR ALIGN='LEFT'>   <TD>newproject=1</TD>
-   <TD>openhardwaremanager=12</TD>
+   <TD>openhardwaremanager=13</TD>
    <TD>recustomizecore=4</TD>
-   <TD>runbitgen=20</TD>
-</TR><TR ALIGN='LEFT'>   <TD>runimplementation=1</TD>
+   <TD>runbitgen=21</TD>
+</TR><TR ALIGN='LEFT'>   <TD>runimplementation=2</TD>
+   <TD>runsynthesis=1</TD>
    <TD>showproductguide=2</TD>
    <TD>showview=5</TD>
-   <TD>viewtaskimplementation=1</TD>
-</TR><TR ALIGN='LEFT'>   <TD>viewtaskprojectmanager=8</TD>
-   <TD>viewtaskrtlanalysis=7</TD>
+</TR><TR ALIGN='LEFT'>   <TD>viewtaskimplementation=1</TD>
+   <TD>viewtaskprojectmanager=8</TD>
+   <TD>viewtaskrtlanalysis=8</TD>
    <TD>zoomfit=1</TD>
 </TR>  </TABLE>
 </TR><TR ALIGN='LEFT'>  <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
    <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>other_data</B></TD></TR>
-<TR ALIGN='LEFT'>   <TD>guimode=5</TD>
+<TR ALIGN='LEFT'>   <TD>guimode=7</TD>
 </TR>  </TABLE>
   <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
    <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>project_data</B></TD></TR>
@@ -252,174 +253,6 @@
     <TD>-ruledecks=default::[not_specified]</TD>
 </TR><TR ALIGN='LEFT'>    <TD>-upgrade_cw=default::[not_specified]</TD>
     <TD>-waived=default::[not_specified]</TD>
-</TR>   </TABLE>
-   </TD></TR>
-   <TR><TD>
-   <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
-    <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>results</B></TD></TR>
-<TR ALIGN='LEFT'>    <TD>pdrc-153=2</TD>
-</TR>   </TABLE>
-   </TD></TR>
-  </TABLE><BR>
- <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
-  <TR ALIGN='CENTER' BGCOLOR='#A7BFDE'><TD COLSPAN='1'><B>report_methodology</B></TD></TR>
-   <TR><TD>
-   <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
-    <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>command_line_options</B></TD></TR>
-<TR ALIGN='LEFT'>    <TD>-append=default::[not_specified]</TD>
-    <TD>-checks=default::[not_specified]</TD>
-    <TD>-fail_on=default::[not_specified]</TD>
-    <TD>-force=default::[not_specified]</TD>
-</TR><TR ALIGN='LEFT'>    <TD>-format=default::[not_specified]</TD>
-    <TD>-messages=default::[not_specified]</TD>
-    <TD>-name=default::[not_specified]</TD>
-    <TD>-return_string=default::[not_specified]</TD>
-</TR><TR ALIGN='LEFT'>    <TD>-slack_lesser_than=default::[not_specified]</TD>
-    <TD>-waived=default::[not_specified]</TD>
-</TR>   </TABLE>
-   </TD></TR>
-   <TR><TD>
-   <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
-    <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>results</B></TD></TR>
-<TR ALIGN='LEFT'>    <TD>timing-17=162</TD>
-    <TD>timing-20=4</TD>
-</TR>   </TABLE>
-   </TD></TR>
-  </TABLE><BR>
- <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
-  <TR ALIGN='CENTER' BGCOLOR='#A7BFDE'><TD COLSPAN='1'><B>report_power</B></TD></TR>
-   <TR><TD>
-   <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
-    <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>command_line_options</B></TD></TR>
-<TR ALIGN='LEFT'>    <TD>-advisory=default::[not_specified]</TD>
-    <TD>-append=default::[not_specified]</TD>
-    <TD>-file=[specified]</TD>
-    <TD>-format=default::text</TD>
-</TR><TR ALIGN='LEFT'>    <TD>-hier=default::power</TD>
-    <TD>-hierarchical_depth=default::4</TD>
-    <TD>-l=default::[not_specified]</TD>
-    <TD>-name=default::[not_specified]</TD>
-</TR><TR ALIGN='LEFT'>    <TD>-no_propagation=default::[not_specified]</TD>
-    <TD>-return_string=default::[not_specified]</TD>
-    <TD>-rpx=[specified]</TD>
-    <TD>-verbose=default::[not_specified]</TD>
-</TR><TR ALIGN='LEFT'>    <TD>-vid=default::[not_specified]</TD>
-    <TD>-xpe=default::[not_specified]</TD>
-</TR>   </TABLE>
-   </TD></TR>
-   <TR><TD>
-   <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
-    <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>usage</B></TD></TR>
-<TR ALIGN='LEFT'>    <TD>airflow=250 (LFM)</TD>
-    <TD>ambient_temp=25.0 (C)</TD>
-    <TD>bi-dir_toggle=12.500000</TD>
-    <TD>bidir_output_enable=1.000000</TD>
-</TR><TR ALIGN='LEFT'>    <TD>board_layers=12to15 (12 to 15 Layers)</TD>
-    <TD>board_selection=medium (10&quot;x10&quot;)</TD>
-    <TD>confidence_level_clock_activity=Low</TD>
-    <TD>confidence_level_design_state=High</TD>
-</TR><TR ALIGN='LEFT'>    <TD>confidence_level_device_models=High</TD>
-    <TD>confidence_level_internal_activity=Medium</TD>
-    <TD>confidence_level_io_activity=Low</TD>
-    <TD>confidence_level_overall=Low</TD>
-</TR><TR ALIGN='LEFT'>    <TD>customer=TBD</TD>
-    <TD>customer_class=TBD</TD>
-    <TD>devstatic=0.796757</TD>
-    <TD>die=xc7a100tcsg324-1</TD>
-</TR><TR ALIGN='LEFT'>    <TD>dsp_output_toggle=12.500000</TD>
-    <TD>dynamic=30.403186</TD>
-    <TD>effective_thetaja=4.6</TD>
-    <TD>enable_probability=0.990000</TD>
-</TR><TR ALIGN='LEFT'>    <TD>family=artix7</TD>
-    <TD>ff_toggle=12.500000</TD>
-    <TD>flow_state=routed</TD>
-    <TD>heatsink=medium (Medium Profile)</TD>
-</TR><TR ALIGN='LEFT'>    <TD>i/o=25.073880</TD>
-    <TD>input_toggle=12.500000</TD>
-    <TD>junction_temp=125.0 (C)</TD>
-    <TD>logic=2.899272</TD>
-</TR><TR ALIGN='LEFT'>    <TD>mgtavcc_dynamic_current=0.000000</TD>
-    <TD>mgtavcc_static_current=0.000000</TD>
-    <TD>mgtavcc_total_current=0.000000</TD>
-    <TD>mgtavcc_voltage=1.000000</TD>
-</TR><TR ALIGN='LEFT'>    <TD>mgtavtt_dynamic_current=0.000000</TD>
-    <TD>mgtavtt_static_current=0.000000</TD>
-    <TD>mgtavtt_total_current=0.000000</TD>
-    <TD>mgtavtt_voltage=1.200000</TD>
-</TR><TR ALIGN='LEFT'>    <TD>netlist_net_matched=NA</TD>
-    <TD>off-chip_power=0.000000</TD>
-    <TD>on-chip_power=31.199943</TD>
-    <TD>output_enable=1.000000</TD>
-</TR><TR ALIGN='LEFT'>    <TD>output_load=5.000000</TD>
-    <TD>output_toggle=12.500000</TD>
-    <TD>package=csg324</TD>
-    <TD>pct_clock_constrained=0.000000</TD>
-</TR><TR ALIGN='LEFT'>    <TD>pct_inputs_defined=0</TD>
-    <TD>platform=nt64</TD>
-    <TD>process=typical</TD>
-    <TD>ram_enable=50.000000</TD>
-</TR><TR ALIGN='LEFT'>    <TD>ram_write=50.000000</TD>
-    <TD>read_saif=False</TD>
-    <TD>set/reset_probability=0.000000</TD>
-    <TD>signal_rate=False</TD>
-</TR><TR ALIGN='LEFT'>    <TD>signals=2.430035</TD>
-    <TD>simulation_file=None</TD>
-    <TD>speedgrade=-1</TD>
-    <TD>static_prob=False</TD>
-</TR><TR ALIGN='LEFT'>    <TD>temp_grade=commercial</TD>
-    <TD>thetajb=5.7 (C/W)</TD>
-    <TD>thetasa=4.6 (C/W)</TD>
-    <TD>toggle_rate=False</TD>
-</TR><TR ALIGN='LEFT'>    <TD>user_board_temp=25.0 (C)</TD>
-    <TD>user_effective_thetaja=4.6</TD>
-    <TD>user_junc_temp=125.0 (C)</TD>
-    <TD>user_thetajb=5.7 (C/W)</TD>
-</TR><TR ALIGN='LEFT'>    <TD>user_thetasa=4.6 (C/W)</TD>
-    <TD>vccadc_dynamic_current=0.000000</TD>
-    <TD>vccadc_static_current=0.020000</TD>
-    <TD>vccadc_total_current=0.020000</TD>
-</TR><TR ALIGN='LEFT'>    <TD>vccadc_voltage=1.800000</TD>
-    <TD>vccaux_dynamic_current=0.916615</TD>
-    <TD>vccaux_io_dynamic_current=0.000000</TD>
-    <TD>vccaux_io_static_current=0.000000</TD>
-</TR><TR ALIGN='LEFT'>    <TD>vccaux_io_total_current=0.000000</TD>
-    <TD>vccaux_io_voltage=1.800000</TD>
-    <TD>vccaux_static_current=0.092856</TD>
-    <TD>vccaux_total_current=1.009471</TD>
-</TR><TR ALIGN='LEFT'>    <TD>vccaux_voltage=1.800000</TD>
-    <TD>vccbram_dynamic_current=0.000000</TD>
-    <TD>vccbram_static_current=0.017841</TD>
-    <TD>vccbram_total_current=0.017841</TD>
-</TR><TR ALIGN='LEFT'>    <TD>vccbram_voltage=1.000000</TD>
-    <TD>vccint_dynamic_current=5.389306</TD>
-    <TD>vccint_static_current=0.562575</TD>
-    <TD>vccint_total_current=5.951881</TD>
-</TR><TR ALIGN='LEFT'>    <TD>vccint_voltage=1.000000</TD>
-    <TD>vcco12_dynamic_current=0.000000</TD>
-    <TD>vcco12_static_current=0.000000</TD>
-    <TD>vcco12_total_current=0.000000</TD>
-</TR><TR ALIGN='LEFT'>    <TD>vcco12_voltage=1.200000</TD>
-    <TD>vcco135_dynamic_current=0.000000</TD>
-    <TD>vcco135_static_current=0.000000</TD>
-    <TD>vcco135_total_current=0.000000</TD>
-</TR><TR ALIGN='LEFT'>    <TD>vcco135_voltage=1.350000</TD>
-    <TD>vcco15_dynamic_current=0.000000</TD>
-    <TD>vcco15_static_current=0.000000</TD>
-    <TD>vcco15_total_current=0.000000</TD>
-</TR><TR ALIGN='LEFT'>    <TD>vcco15_voltage=1.500000</TD>
-    <TD>vcco18_dynamic_current=0.000000</TD>
-    <TD>vcco18_static_current=0.000000</TD>
-    <TD>vcco18_total_current=0.000000</TD>
-</TR><TR ALIGN='LEFT'>    <TD>vcco18_voltage=1.800000</TD>
-    <TD>vcco25_dynamic_current=0.000000</TD>
-    <TD>vcco25_static_current=0.000000</TD>
-    <TD>vcco25_total_current=0.000000</TD>
-</TR><TR ALIGN='LEFT'>    <TD>vcco25_voltage=2.500000</TD>
-    <TD>vcco33_dynamic_current=7.079992</TD>
-    <TD>vcco33_static_current=0.004000</TD>
-    <TD>vcco33_total_current=7.083992</TD>
-</TR><TR ALIGN='LEFT'>    <TD>vcco33_voltage=3.300000</TD>
-    <TD>version=2018.3</TD>
 </TR>   </TABLE>
    </TD></TR>
   </TABLE><BR>
@@ -728,10 +561,10 @@
    <TR><TD>
    <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
     <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>usage</B></TD></TR>
-<TR ALIGN='LEFT'>    <TD>elapsed=00:00:37s</TD>
+<TR ALIGN='LEFT'>    <TD>elapsed=00:00:51s</TD>
     <TD>hls_ip=0</TD>
-    <TD>memory_gain=643.977MB</TD>
-    <TD>memory_peak=910.008MB</TD>
+    <TD>memory_gain=641.445MB</TD>
+    <TD>memory_peak=935.574MB</TD>
 </TR>   </TABLE>
    </TD></TR>
   </TABLE><BR>
